--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="nav-container">
             <div class="logo-container">
                 <img src="class-badge.png" alt="班徽" class="logo" onerror="this.src='data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTAwIiBoZWlnaHQ9IjEwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48Y2lyY2xlIGN4PSI1MCIgY3k9IjUwIiByPSI0NSIgZmlsbD0iIzM0OThkYiIvPjx0ZXh0IHg9IjUwIiB5PSI1NSIgZm9udC1mYW1pbHk9IkFyaWFsIiBmb250LXNpemU9IjE0IiBmaWxsPSJ3aGl0ZSIgdGV4dC1hbmNob3I9Im1pZGRsZSI+5YiG5LqrPC90ZXh0Pjwvc3ZnPg=='">
-                <span class="class-name">20（2）班官网</span>
+                <span class="class-name">合肥实验学校——202班官方网站</span>
             </div>
             <div class="nav-links">
                 <a href="#home">首页</a>
@@ -60,7 +60,7 @@
                     <div class="stat">
                         <i class="fas fa-trophy"></i>
                         <h3>获得荣誉</h3>
-                        <p>太太太太太太太太太太太太太太太太多啦！</p>
+                        <p>太多啦！（∞）</p>
                     </div>
                 </div>
             </div>
