--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div id="loginError" class="login-error"></div>
                 <button onclick="checkLogin()" class="btn">登录</button>
                 <div class="login-info">
-                    <p><strong>可用账号（点击快速填写）：</strong></p>
+                    <p><strong>上次登录（点击快速填写）：</strong></p>
                     <div id="accountList" class="account-list"></div>
                 </div>
             </div>
