--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
         <div class="login-container">
             <div class="logo-container">
                 <img src="school-logo.png" alt="校徽" class="school-logo" onerror="this.style.display='none'">
-                <h2>合肥实验学校20级2班</h2>
+                <h2>登录，极享美好世界！</h2>
             </div>
             
             <div class="login-form">
@@ -501,7 +501,7 @@
     <script>
         // 用户数据
         const users = {
-            '孙亦阳': { password: 'JayceV', role: '管理员', name: '网站管理员管理员', canManage: true },
+            '孙亦阳': { password: 'JayceV', role: '管理员', name: '班级网站管理员', canManage: true },
             '姚笑笑': { password: 'YXX', role: '老师', name: '班主任', canManage: true },
             '钱思宇': { password: 'QSY', role: '同学', name: '钱思宇［奋斗の你］', canManage: false },
             '郑梓珺': { password: '114514', role: '郑梓珺', name: '菜问' },
