--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
                 <div>
                     <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 20px;">
                         <img src="school-logo.png" alt="班徽" style="height: 50px; width: auto;">
-                        <h3 style="color: white;">卓越一班</h3>
+                        <h3 style="color: white;">20（2）班最有爱！</h3>
                     </div>
                     <p>这里是我们的数字家园，记录着我们的成长与奋斗。</p>
                 </div>
@@ -1118,9 +1118,9 @@
         // ========== 预设账号区域（开发者在此设置） ==========
         const PRESET_ACCOUNTS = {
             // 格式：用户名: {密码: "密码", role: "角色", coins: 班币数量}
-            "管理员": {password: "SYYADMINs", role: "管理员", coins: 9999999999999999999999},
-            "姚笑笑": {password: "YXX", role: "", coins: 99999999999999999999},
-            "vipuser": {password: "vip123", role: "VIP", coins: 500},
+            "管理员": {password: "SYYADMINs", role: "admin", coins: 9999999999999999999999},
+            "姚笑笑": {password: "YXX", role: "teacher", coins: 99999999999999999999},
+            "威爱劈": {password: "vip123", role: "VIP", coins: 500},
             "访客": {password: "student123", role: "member", coins: 0},
             "访客2": {password: "student456", role: "member", coins: 0}
         };
